beens a while since last save

--- a/index.html
+++ b/index.html
@@ -56,14 +56,25 @@
   </section>
   <section class="right">
     <div class="weapon">
+      <div class="weapon-border">
+
+      </div>
       <p class="ammo"><span class="ammo--41"><em>41</span>/100</em></p>
       <img src="http://vignette3.wikia.nocookie.net/overwatch/images/7/73/Minesweeper.png/revision/latest?cb=20160529234636" width="150rem"/>
     </div>
+    <div class="abilities">
+      <img src="http://vignette4.wikia.nocookie.net/overwatch/images/d/de/IconBlink.png" width="30rem"/>
+      <img src="http://vignette4.wikia.nocookie.net/overwatch/images/0/0c/IconRecall.png" width="30rem" />
+    </div>
+
   </section>
   <section class="middle">
     <div class="kills">
-      <h2><em>ELIMINATED <span class="w2">REAPER</em></span></h2>
-      <h2><em>ELIMINATED <span class="w2">REINHARDT</em></span></h2>
+      <div class= "skull">
+        <img src="http://www.iconsdb.com/icons/preview/red/skull-32-xxl.png" alt="NOPE!!" width="70rem"/>
+      </div>
+        <h2><em>ELIMINATED <span class="w2">REAPER</em></span></h2>
+        <h2><em>ELIMINATED <span class="w2">REINHARDT</em></span></h2>
     </div>
   </section>
 
