--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@
       <img src="http://vignette3.wikia.nocookie.net/overwatch/images/7/73/Minesweeper.png/revision/latest?cb=20160529234636" width="150rem"/>
     </div>
     <div class="abilities">
-      <img src="http://vignette4.wikia.nocookie.net/overwatch/images/d/de/IconBlink.png" width="30rem"/>
-      <img src="http://vignette4.wikia.nocookie.net/overwatch/images/0/0c/IconRecall.png" width="30rem" />
+      <img class="abilities--1" src="http://vignette4.wikia.nocookie.net/overwatch/images/d/de/IconBlink.png" width="38rem"/>
+      <img class="abilities--2" src="http://vignette4.wikia.nocookie.net/overwatch/images/0/0c/IconRecall.png" width="38rem" />
+
+    <div class="key1">
+      <i class="fa fa-arrow-up" aria-hidden="true"></i>
+    </div>
+    <div class="key2">
+      <p>E</p>
+    </div>
     </div>
 
   </section>
@@ -75,6 +82,13 @@
       </div>
         <h2><em>ELIMINATED <span class="w2">REAPER</em></span></h2>
         <h2><em>ELIMINATED <span class="w2">REINHARDT</em></span></h2>
+    </div>
+    <div class="cir-parent">
+    <div class="circle">
+      <div class="cir--text">
+        <p class="inner--cir1">31</p><p class="inner--cir2">%</p>
+      </div>
+    </div>
     </div>
   </section>
 
